# Splitter

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/splitter/: pdf.py
src/splitting/: excel.py
tests/: example_excel.xls  test_excel.py  test_pdf.py
