[metadata]
name = splitting
version = 0.0.9
author = Peter Horvat
author_email = peter.horvat85@gmail.com
description = Document splitter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peterhorvat/Splitter
project_urls =
    Bug Tracker = https://github.com/peterhorvat/Splitter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires=
    PyPDF2==2.10.8
    xlwings

[options.packages.find]
where = src
